--- a/styles/general.css
+++ b/styles/general.css
@@ -1,3 +1,37 @@
 * {
     font-family: sans-serif;
+    color: #23282D;
+}
+
+.title {
+    margin-bottom: 12px;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.subtitle {
+    font-size: 64px;
+    font-weight: 400;
+    line-height: 1;
+}
+
+.paragraph {
+    font-size: 16px;
+}
+
+.standard-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 151px;
+    height: 52px;
+    background-color: #377D67;
+    color: #fff;
+    border: none;
+    border-radius: 0;
+    cursor: pointer;
+}
+
+.standard-button:hover {
+    background-color: #4CAE89;
 }
