--- a/styles/about.css
+++ b/styles/about.css
@@ -8,7 +8,11 @@
     display: flex;
     flex-direction: column;
     margin-left: 24px;
-    padding-top: 200px;
+    padding-top: 128px;
+}
+
+.image-background {
+    width: 100%;
 }
 
 .about-title {
@@ -23,5 +27,5 @@
     width: 436px;
     height: 507px;
     margin-left: 48px;
-    padding-top: 200px;
+    padding-top: 88px;
 }
