--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,7 +1,7 @@
 .banner {
     position: relative;
     width: 100%;
-    min-height: 1vh;
+    max-height: 488px;
     background-image: url(../imagens/img-banner.png);
     background-size: cover;
     background-position: center;
@@ -11,7 +11,7 @@
     display: flex;
     margin-left: 24px;
     flex-direction: column;
-    padding-top: 200px;
+    padding-top: 32px;
     max-width: 600px;
 }
 
