--- a/styles/cta.css
+++ b/styles/cta.css
@@ -1,6 +1,6 @@
 .cta {
     width: 100%;
-    height: 480px;
+    height: auto;
     background-color: #377d67;
     margin-top: 109px;
 }
@@ -10,7 +10,7 @@
     flex-direction: column;
     position: relative;
     align-items: center;
-    padding: 132px;
+    padding: 96px;
     color: #fff;
 }
 
@@ -20,9 +20,31 @@
 }
 
 .cta__content p {
-    font-size: 42px;
+    font-size: 24px;
+    display: flex;
 }
 
 .cta-button {
     margin-top: 40px;
+}
+
+@media screen and (max-width: 730px) {
+    .cta__content {
+        padding: 32px;
+    }
+
+    .cta__content span {
+        font-size: 12px;
+    }
+
+    .cta__content p {
+        font-size: 16px;
+    }
+
+    .cta {
+        height: auto;
+        margin-top: 64px;
+    }
+    
+
 }
