--- a/styles/general.css
+++ b/styles/general.css
@@ -1,5 +1,15 @@
-* {
-    font-family: sans-serif;
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    font-family:
+        "Poppins",
+        Helvetica Neue,
+        Helvetica,
+        Arial,
+        sans-serif;
+    font-size: 12px;
 }
 
 .title {
@@ -13,12 +23,12 @@
     font-size: 64px;
     font-weight: 400;
     line-height: 1;
-    color: #050D0F;
+    color: #050d0f;
 }
 
 .paragraph {
     font-size: 16px;
-    color: #050D0F;
+    color: #050d0f;
 }
 
 .standard-button {
@@ -39,7 +49,6 @@
     background-color: #4cae89;
 }
 
-
 .white-button {
     display: flex;
     align-items: center;
@@ -47,7 +56,7 @@
     width: 151px;
     height: 52px;
     background-color: #fff;
-    color: #39364E;
+    color: #39364e;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -55,6 +64,52 @@
 }
 
 .white-button:hover {
-    background-color: #4B6FAD;
+    background-color: #4b6fad;
     color: #fff;
+}
+
+.blue-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 151px;
+    height: 52px;
+    background-color: #4b6fad;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.blue-button:hover {
+    background-color: #265df2;
+}
+
+.divider {
+    width: calc(100% - 64px);
+    position: relative;
+    height: 1px;
+    background-color: #ccc;
+  }
+
+@media screen and (max-width: 730px) {
+    .title {
+        margin-bottom: 12px;
+    }
+
+    .subtitle {
+        font-size: 24px;
+    }
+
+    .paragraph {
+        font-size: 10px;
+    }
+
+    .standard-button,
+    .white-button,
+    .blue-button {
+        display: block;
+        width: 100%;
+    }
 }
