Footer, imagens, SEO
Reconstrução do Footer
Substituição de imagens
Adequação HTML para SEO
Correções CSS

--- a/styles/fotos.css
+++ b/styles/fotos.css
@@ -7,16 +7,12 @@
     text-align: center;
 }
 
-.midia__page__header {
-
-}
-
 .midia__page__header__title {
     color: #377d67;
 }
 
 .midia__page__header__description {
-
+    margin: 32px;
 }
 .container{
     width: 100% ;
