--- a/styles/footer.css
+++ b/styles/footer.css
@@ -3,8 +3,18 @@
     flex-direction: column;
     min-height: 300px;
     background-color: #23282d;
-    padding: 24px;
     color: #fff;
+    position: relative;
+    padding: 24px;
+    font-size: 14px;
+}
+
+.footer__container {
+    margin-top: 24px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-left: 64px;
 }
 
 .footer__links {
@@ -17,12 +27,9 @@
     cursor: pointer;
 }
 
-.footer__column__left {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    left: 0;
-    margin-left: 64px;
+.footer__column__left,
+.footer__column__right {
+    flex: 1;
 }
 
 .location {
@@ -45,19 +52,27 @@
     cursor: pointer;
 }
 
-.footer__column__right {
-    display: flex;
-    flex-direction: column;
+.copyright {
+    width: 100%;
     position: absolute;
-    right: 0;
-    margin-right: 64px;
+    bottom: 0;
+    margin-bottom: 16px;
+    text-align: center;
 }
 
-.footer__copyright{
-    background-color: #377d67;
-    font-size: 10px;
-    color: #fff;
-    width: 100%;
-    height: 32px;
-    padding: 1em 0;
+@media screen and (max-width: 730px) {
+    .footer__container {
+        flex-direction: column;
+        margin-left: 0;
+    }
+
+    .copyright {
+        width: auto;
+        text-align: left;
+    }
+
+    .footer__column__left,
+    .footer__column__right {
+        margin-bottom: 64px;
+    }
 }
