--- a/styles/header.css
+++ b/styles/header.css
@@ -1,3 +1,9 @@
+.top-bar {
+    background-color: #489681;
+    width: 100%;
+    height: 32px;
+}
+
 header {
     background-color: #fff;
     box-shadow: 0px 3px 10px #464646;
@@ -51,6 +57,7 @@ header {
     padding: 10px 15px;
     border-radius: 5px;
     background-color: #0187a7;
+    transition: background-color 0.3s ease;
 }
 
 .login-button button a {
@@ -58,6 +65,12 @@ header {
     color: #fff;
     font-weight: 500;
     font-size: 1.1rem;
+}
+
+.login-button:hover {
+    background-color: #1DB4DA;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 .mobile-menu-icon {
