--- a/styles/about.css
+++ b/styles/about.css
@@ -91,6 +91,14 @@
     font-weight: 300;
 }
 
+.about__page__img {
+    display: block; 
+    margin-left: auto;
+    margin-right: auto;
+    width: 400px;
+    height: 400px;
+}
+
 @media screen and (max-width: 730px) {
     .about__container {
         display: flex;
