--- a/styles/footer.css
+++ b/styles/footer.css
@@ -20,6 +20,7 @@
 .footer__links {
     font-family: sans-serif;
     font-weight: 500;
+    line-height: 1.5;
 }
 
 .link:hover {
@@ -33,7 +34,7 @@
 }
 
 .location {
-    margin-top: 32px;
+    margin-top: 16px;
     max-width: 280px;
 }
 
